--- a/CMStopicutopia/ItemPage.Master
+++ b/CMStopicutopia/ItemPage.Master
@@ -4,6 +4,9 @@
 
 <html>
 <head runat="server">
+
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -13,7 +16,9 @@
             </asp:ContentPlaceHolder>
     <form id="form1" runat="server">
         <div>
-            <asp:ContentPlaceHolder ID="ItemName" runat="server">
+            <asp:ContentPlaceHolder ID="row" runat="server">
+                
+  
             </asp:ContentPlaceHolder>
             <asp:ContentPlaceHolder ID="ItemImage" runat="server">
             </asp:ContentPlaceHolder>
